# stabilipy

./: .gitignore  LICENSE  environment.yml  readme.md  requirements.txt  setup.cfg
dynamo/: Egenskaper.json  Stabilitet.json  dam.dyn  dam_stability_3d.dyf
stabilipy/: dam.py  evaluation.py  export.py  load.py  pillar.py  report.py  segment.py  settings.py  stability.py
stabilipy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: context.py  example_dam.py  test_dam.py  test_export.py  test_pillar.py  test_report.py  test_segment.py
