[metadata]
name = stabilipy
version = 0.0.1
author = timsta95
author_email = stabilipy@gmail.com
description = Concrete-dam stability analyses
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/timsta95/stabilipy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True